@startuml
title Logistic model
left to right direction

class Package {
    customer: Customer
    from: String
    to: String
    amount: Number
    dateOfDelivery: Date
}

class Warehouse {
    name:String
    city: String
    maxLimit: Number
    maxOccupied: Number
}

class Customer {
    name: String 
    surname: String 
    adress: String 
    phone: String 
    email: String 
}

Package "1" --> "1" Customer
Warehouse "1" *--> "0.. *" Package

@enduml